Split sound.c, define MVGK, match SetMvgkUvol

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -210,7 +210,7 @@ segments:
     - [0xb8968, asm, P2/so]
     - [0xbd760, asm, P2/solve]
     - [0xbf068, asm, P2/sort]
-    - [0xbf1e8, asm, P2/sound]
+    - [0xbf1e8, c, P2/sound]
     - [0xc1f30, asm, P2/speaker]
     - [0xc2190, asm, P2/splicemap]
     - [0xc24c0, asm, P2/spliceobj]
