--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -168,7 +168,7 @@ segments:
     - [0x8b388, asm, P2/mecha]
     #- [0x, asm, P2/mb]
     #- [0x, asm, P2/memcard]
-    - [0x8e4b0, c, P2/memory]
+    - [0x8e430, c, P2/memory]
     - [0x8e8e0, asm, P2/missile]
     #- [0x, asm, P2/mouthgame]
     #- [0x, asm, P2/mpeg]
