--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -99,7 +99,7 @@ segments:
     - [0x3c4c0, asm, P2/bomb]
     #- [0x, asm, P2/bone]
     #- [0x, asm, P2/bq]
-    - [0x3dcf8, asm, P2/break]
+    - [0x3dcf8, c, P2/break]
     - [0x3efd8, c, P2/bsp]
     - [0x3f7c0, c, P2/button]
     - [0x41790, c, P2/cat]
