--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -164,9 +164,9 @@ segments:
     - [0x86358, asm, P2/lookat]
     - [0x86758, c, P2/main]
     - [0x86c18, asm, P2/mark]
-    - [0x894c0, asm, P2/mat]
-    #- [0x, asm, P2/mb]
-    - [0x8b388, asm, P2/mecha]
+    - [0x894c0, c, P2/mat]
+    - [0x8b388, asm, P2/mb]
+    #- [0x, asm, P2/mecha]
     #- [0x, asm, P2/memcard]
     - [0x8e430, c, P2/memory]
     - [0x8e8e0, asm, P2/missile]
