--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -168,9 +168,8 @@ segments:
     - [0x894c0, c, P2/mat1]
     - [0x89810, c, P2/mat_AddMatrix4Matrix4] # Should be in P2/mat but doesn't match when linked with INCLUDE_ASM
     - [0x89850, c, P2/mat2]
-    - [0x8b388, asm, P2/mb]
-    #- [0x, asm, P2/mecha]
-    #- [0x, asm, P2/memcard]
+    - [0x8b388, c, P2/mb]
+    - [0x8c580, asm, P2/memcard]
     - [0x8e430, c, P2/memory]
     - [0x8e8e0, asm, P2/missile]
     #- [0x, asm, P2/mouthgame]
@@ -211,8 +210,8 @@ segments:
     - [0xb6f50, asm, P2/sm]
     #- [0x, asm, P2/smartguard]
     - [0xb8968, asm, P2/so]
-    - [0xbd760, asm, P2/solve]
-    - [0xbf068, asm, P2/sort]
+    - [0xbd760, c, P2/solve]
+    - [0xbf068, c, P2/sort]
     - [0xbf1e8, c, P2/sound]
     - [0xc1f30, asm, P2/speaker]
     - [0xc2190, asm, P2/splicemap]
