Split P2/mpeg, P2/mrkv, P2/ms, P2/path

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -167,11 +167,11 @@ segments:
     - [0x8e430, c, P2/memory]
     - [0x8e8e0, asm, P2/missile]
     #- [0x, asm, P2/mouthgame]
-    #- [0x, asm, P2/mpeg]
-    #- [0x, asm, P2/mrkv]
-    #- [0x, asm, P2/ms]
-    #- [0x, asm, P2/murray]
-    - [0x917e0, asm, P2/path]
+    - [0x8f5e8, c, P2/mpeg]
+    - [0x90988, c, P2/mrkv]
+    - [0x909d8, asm, P2/ms]
+    - [0x90ef8, asm, P2/murray]
+    - [0x917e0, c, P2/path]
     - [0x92e70, c, P2/phasemem]
     - [0x92ec0, asm, P2/pipe]
     - [0x93068, asm, P2/pnt]
