Split P2/eyes, P2/fader, P2/fly, P2/font

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -126,14 +126,14 @@ segments:
     #- [0x, asm, P2/dysh]
     #- [0x, asm, P2/dzg]
     - [0x559c8, asm, P2/emitter]
-    - [0x5a6e0, asm, P2/eyes]
-    - [0x5aad0, asm, P2/fader]
+    - [0x5a680, c, P2/eyes]
+    - [0x5aad0, c, P2/fader]
     - [0x5aca0, asm, P2/filestub]
     - [0x5af20, c, P2/find]
     - [0x5b8b0, c, P2/flash]
-    - [0x5bae0, asm, P2/fly]
-    - [0x5d188, asm, P2/font]
-    - [0x5f810, c, P2/frm]
+    - [0x5bae0, c, P2/fly]
+    - [0x5d178, c, P2/font]
+    - [0x5f6a8, c, P2/frm]
     - [0x60678, asm, P2/freeze]
     - [0x60f88, asm, P2/frzg]
     - [0x61070, c, P2/game]
