--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -199,14 +199,15 @@ segments:
     - [0xb3988, asm, P2/shd]
     - [0xb5920, asm, P2/shdanim]
     - [0xb6cd8, c, P2/sky]
-    - [0xb6d80, asm, P2/slotheap]
+    - [0xb6d80, c, P2/slotheap]
     - [0xb6f50, asm, P2/sm]
-    #- [0x, asm, P2/smartguard]
+    - [0xb7ec8, c, P2/smartguard]
     - [0xb8968, asm, P2/so]
     - [0xbd760, c, P2/solve]
     - [0xbf068, c, P2/sort]
     - [0xbf1e8, c, P2/sound]
-    - [0xc1f30, asm, P2/speaker]
+    - [0xc1f30, c, P2/speaker]
+    - [0xc20a8, c, P2/spire]
     - [0xc2190, asm, P2/splicemap]
     - [0xc24c0, asm, P2/spliceobj]
     - [0xc3430, asm, P2/sprbuf]
