--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -87,18 +87,17 @@ segments:
     - [0x24dc0, asm, P2/alo]
     # Note: Anticrack check for ITM firewall is 0x2c760, maybe it's own TU?
     - [0x2c870, asm, P2/aseg]
-    #- [0x, asm, P2/asega]
-    #- [0x, asm, P2/barrier]
+    - [0x2e3f8, c, P2/asega]
+    - [0x30840, c, P2/barrier]
     - [0x30cf0, c, P2/bas]
     - [0x310e8, c, P2/basic]
     - [0x31168, c, P2/bez]
     - [0x31f48, c, P2/binoc]
     - [0x38290, c, P2/bis]
-    - [0x395a0, asm, P2/bbmark]
-    - [0x39ff0, asm, P2/blend]
-    - [0x3ab70, asm, P2/blip]
-    - [0x3c4c0, asm, P2/bomb]
-    #- [0x, asm, P2/bone]
+    - [0x395a0, c, P2/bbmark]
+    - [0x39ff0, c, P2/blend]
+    - [0x3ab70, c, P2/blip]
+    - [0x3c4c0, c, P2/bomb]
     - [0x3d988, c, P2/bq]
     - [0x3dcf8, c, P2/break]
     - [0x3efd8, c, P2/bsp]
@@ -106,19 +105,19 @@ segments:
     - [0x41790, c, P2/cat]
     - [0x417a8, c, P2/cd]
     - [0x41d90, c, P2/chkpnt]
-    - [0x429e8, asm, P2/clip]
+    - [0x429e8, c, P2/clip]
     - [0x43ed0, c, P2/clock]
     - [0x44148, c, P2/cm]
-    - [0x47100, asm, P2/cnvo]
+    - [0x47100, c, P2/cnvo]
     - [0x47340, c, P2/coin]
     - [0x4a398, c, P2/cplcy]
     - [0x4bbd0, c, P2/credit]
     - [0x4c0c0, c, P2/crout]
     - [0x4c550, asm, P2/crusher]
-    - [0x4e0a8, asm, P2/crv]
-    - [0x4fe40, asm, P2/dart]
-    #- [0x, asm, P2/dartgun]
-    #- [0x, asm, P2/dialog]
+    - [0x4e0a8, c, P2/crv]
+    - [0x4fe40, c, P2/dart]
+    - [0x50740, c, P2/dartgun]
+    - [0x514e0, asm, P2/dialog]
     - [0x529e0, c, P2/difficulty]
     - [0x53438, c, P2/dl]
     - [0x53810, c, P2/dmas]
