--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -117,24 +117,23 @@ segments:
     - [0x4e0a8, c, P2/crv]
     - [0x4fe40, c, P2/dart]
     - [0x50740, c, P2/dartgun]
-    - [0x514e0, asm, P2/dialog]
+    - [0x514e0, c, P2/dialog]
     - [0x529e0, c, P2/difficulty]
     - [0x53438, c, P2/dl]
     - [0x53810, c, P2/dmas]
-    - [0x53E28, asm, P2/dsp]
-    #- [0x, asm, P2/dysh]
-    #- [0x, asm, P2/dzg]
+    - [0x53e28, c, P2/dysh]
+    - [0x54528, c, P2/dzg]
     - [0x559c8, asm, P2/emitter]
     - [0x5a680, c, P2/eyes]
     - [0x5aad0, c, P2/fader]
-    - [0x5aca0, asm, P2/filestub]
+    - [0x5aca0, asm, P2/UNKNOWN1] # Not in the prototype.
     - [0x5af20, c, P2/find]
     - [0x5b8b0, c, P2/flash]
     - [0x5bae0, c, P2/fly]
     - [0x5d178, c, P2/font]
     - [0x5f6a8, c, P2/frm]
-    - [0x60678, asm, P2/freeze]
-    - [0x60f88, asm, P2/frzg]
+    - [0x60678, c, P2/freeze]
+    - [0x60f88, c, P2/frzg]
     - [0x61070, c, P2/game]
     - [0x61e80, c, P2/geom]
     - [0x621b8, c, P2/gifs]
@@ -227,22 +226,22 @@ segments:
     - [0xd8120, asm, P2/stream]
     - [0xd83a8, c, P2/suv]
     - [0xdc480, asm, P2/sw]
-    - [0xdeb20, asm, P2/UNKNOWN1] # Unknown, falls alphabetically between sw and tail
+    - [0xdeb20, asm, P2/UNKNOWN2] # Unknown, falls alphabetically between sw and tail
     - [0xdece0, c, P2/tail]
     - [0xdf798, c, P2/tank]
     - [0xe0d48, c, P2/target]
-    - [0xe0e80, asm, P2/UNKNOWN2] # Not in the prototype. Related to master thief sprints.
+    - [0xe0e80, asm, P2/tatk] # Not in the prototype. Related to master thief sprints.
     - [0xe18f8, c, P2/text]
     - [0xe3268, c, P2/thread]
     - [0xe3420, asm, P2/tn]
     - [0xe5e38, c, P2/transition]
-    - [0xe6378, asm, P2/turret]
+    - [0xe6378, c, P2/turret]
     - [0xe6e70, c, P2/tv]
     - [0xe98d0, c, P2/ub]
     - [0xea088, c, P2/ui]
     - [0xeac78, c, P2/update]
     - [0xeb408, c, P2/util]
-    - [0xec460, asm, P2/var]
+    - [0xec460, asm, P2/UNKNOWN3] # Not in the prototype.
     - [0xee650, c, P2/vec]
     - [0xef318, c, P2/vifs]
     - [0xef900, c, P2/vis]
@@ -256,6 +255,7 @@ segments:
 
     ## Segments in prototype confirmed not present in release:
     # P2/cycle.c - some kind of wheeled vehicle
+    # P2/dsp.c - unknown.
     # P2/hg.c - hang glider
     # P2/stepski.c - skiing
     # P2/map2d.c - unknown
