Split, match, cleanup

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -151,12 +151,12 @@ segments:
     - [0x79008, asm, P2/jp]
     #- [0x, asm, P2/jsg]
     - [0x7e248, asm, P2/jump]
-    #- [0x, asm, P2/keyhole]
-    #- [0x, asm, P2/landing]
-    #- [0x, asm, P2/lgn]
+    - [0x80e90, c, P2/keyhole]
+    - [0x81eb0, c, P2/landing]
+    - [0x81f68, c, P2/lgn]
     - [0x83c18, c, P2/lo]
     - [0x84cc8, asm, P2/light]
-    - [0x86358, asm, P2/lookat]
+    - [0x86358, c, P2/lookat]
     - [0x86758, c, P2/main]
     - [0x86c18, asm, P2/mark]
     - [0x894c0, c, P2/mat]
@@ -176,13 +176,13 @@ segments:
     - [0x931a8, c, P2/po]
     - [0x94210, c, P2/prog]
     - [0x94598, asm, P2/prompt]
-    #- [0x, asm, P2/proxy]
-    #- [0x, asm, P2/puffer]
-    #- [0x, asm, P2/pzo]
-    #- [0x, asm, P2/rail]
-    - [0x9c038, asm, P2/rat]
+    - [0x973d8, c, P2/proxy]
+    - [0x97938, asm, P2/puffer]
+    - [0x99980, c, P2/pzo]
+    - [0x9bf00, c, P2/rail]
+    - [0x9c038, c, P2/rat]
     - [0x9d440, asm, P2/rchm]
-    - [0x9e410, asm, P2/render]
+    - [0x9e410, c, P2/render]
     - [0x9f040, asm, P2/rip]
     #- [0x, asm, P2/rog]
     #- [0x, asm, P2/rope]
@@ -223,7 +223,7 @@ segments:
     - [0xd46f0, asm, P2/steprun]
     - [0xd5148, asm, P2/stepside]
     - [0xd5848, asm, P2/stepzap]
-    - [0xd8120, asm, P2/stream]
+    - [0xd8100, c, P2/stream]
     - [0xd83a8, c, P2/suv]
     - [0xdc480, asm, P2/sw]
     - [0xdeb20, asm, P2/UNKNOWN2] # Unknown, falls alphabetically between sw and tail
