--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -80,7 +80,7 @@ segments:
     #--------------------------------------------------------
     - [0x1dbb8, c, P2/989snd] #MARK: P2
     - [0x1f560, c, P2/brx]
-    - [0x1fe70, asm, P2/ac]
+    - [0x1fe70, c, P2/ac]
     - [0x22228, asm, P2/act]
     - [0x23f28, c, P2/actseg]
     - [0x243c0, c, P2/alarm]
@@ -158,21 +158,21 @@ segments:
     - [0x84cc8, asm, P2/light]
     - [0x86358, c, P2/lookat]
     - [0x86758, c, P2/main]
-    - [0x86c18, asm, P2/mark]
+    - [0x86c18, c, P2/mark]
     - [0x894c0, c, P2/mat]
     - [0x8b388, c, P2/mb]
     - [0x8c580, asm, P2/memcard]
     - [0x8e430, c, P2/memory]
     - [0x8e8e0, asm, P2/missile]
-    #- [0x, asm, P2/mouthgame]
+    #- [0x, asm, P2/mouthgame] # Most likely not in release.
     - [0x8f5e8, c, P2/mpeg]
     - [0x90988, c, P2/mrkv]
     - [0x909d8, c, P2/ms]
-    - [0x90ef8, asm, P2/murray]
+    - [0x90ef8, c, P2/murray]
     - [0x917e0, c, P2/path]
     - [0x92e70, c, P2/phasemem]
-    - [0x92ec0, asm, P2/pipe]
-    - [0x93068, asm, P2/pnt]
+    - [0x92ec0, c, P2/pipe]
+    - [0x93068, c, P2/pnt]
     - [0x931a8, c, P2/po]
     - [0x94210, c, P2/prog]
     - [0x94598, asm, P2/prompt]
@@ -192,9 +192,9 @@ segments:
     #- [0x, asm, P2/sc]
     - [0xaac68, c, P2/screen]
     - [0xaf510, asm, P2/sensor]
-    - [0xb2ac8, asm, P2/shadow]
-    #- [0x, asm, P2/shape]
-    - [0xb3988, asm, P2/shd]
+    - [0xb2ac8, c, P2/shadow]
+    - [0xb3840, c, P2/shape]
+    - [0xb3988, c, P2/shd]
     - [0xb5920, asm, P2/shdanim]
     - [0xb6cd8, c, P2/sky]
     - [0xb6d80, c, P2/slotheap]
