Split P2/tn, P2/sm, P2/sensor, P2/rchm, P2/missile + misc stuff

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -163,9 +163,8 @@ segments:
     - [0x8b388, c, P2/mb]
     - [0x8c580, asm, P2/memcard]
     - [0x8e430, c, P2/memory]
-    - [0x8e8e0, asm, P2/missile]
-    #- [0x, asm, P2/mouthgame] # Most likely not in release.
-    - [0x8f5e8, c, P2/mpeg]
+    - [0x8e8e0, c, P2/missile]
+    - [0x8f410, c, P2/mpeg]
     - [0x90988, c, P2/mrkv]
     - [0x909d8, c, P2/ms]
     - [0x90ef8, c, P2/murray]
@@ -181,7 +180,7 @@ segments:
     - [0x99980, c, P2/pzo]
     - [0x9bf00, c, P2/rail]
     - [0x9c038, c, P2/rat]
-    - [0x9d440, asm, P2/rchm]
+    - [0x9d440, c, P2/rchm]
     - [0x9e410, c, P2/render]
     - [0x9f040, asm, P2/rip]
     #- [0x, asm, P2/rog]
@@ -191,14 +190,14 @@ segments:
     #- [0x, asm, P2/sampler] # Might not be in release
     #- [0x, asm, P2/sc]
     - [0xaac68, c, P2/screen]
-    - [0xaf510, asm, P2/sensor]
+    - [0xafcb0, c, P2/sensor]
     - [0xb2ac8, c, P2/shadow]
     - [0xb3840, c, P2/shape]
     - [0xb3988, c, P2/shd]
     - [0xb5920, asm, P2/shdanim]
     - [0xb6cd8, c, P2/sky]
     - [0xb6d80, c, P2/slotheap]
-    - [0xb6f50, asm, P2/sm]
+    - [0xb6f50, c, P2/sm]
     - [0xb7ec8, c, P2/smartguard]
     - [0xb8968, asm, P2/so]
     - [0xbd760, c, P2/solve]
@@ -233,7 +232,7 @@ segments:
     - [0xe0e80, asm, P2/tatk] # Not in the prototype. Related to master thief sprints.
     - [0xe18f8, c, P2/text]
     - [0xe3268, c, P2/thread]
-    - [0xe3420, asm, P2/tn]
+    - [0xe3420, c, P2/tn]
     - [0xe5e38, c, P2/transition]
     - [0xe6378, c, P2/turret]
     - [0xe6e70, c, P2/tv]
