--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -8,7 +8,7 @@ options:
   elf_path: SCUS_971.98
   base_path: ../
   platform: ps2
-  compiler: GCC
+  compiler: EEGCC
 
   # Output paths
   asm_path: asm
