--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -190,7 +190,7 @@ segments:
     #- [0x, asm, P2/rope]
     - [0xa8b20, c, P2/rumble]
     - [0xa8fe8, c, P2/rwm]
-    - [0xaa8f8, asm, P2/UNKNOWN3] # Not in the prototype.
+    - [0xaa8f8, asm, P2/sb]
     #- [0x, asm, P2/sc] # Most likely not in retail.
     - [0xaac68, c, P2/screen]
     - [0xafcb0, c, P2/sensor]
@@ -243,7 +243,7 @@ segments:
     - [0xea088, c, P2/ui]
     - [0xeac78, c, P2/update]
     - [0xeb408, c, P2/util]
-    - [0xec460, asm, P2/UNKNOWN5] # Not in the prototype.
+    - [0xec460, asm, P2/vb]
     - [0xee650, c, P2/vec]
     - [0xef318, c, P2/vifs]
     - [0xef900, c, P2/vis]
