--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -144,7 +144,7 @@ segments:
     - [0x68d68, c, P2/gomer]
     - [0x69130, c, P2/gs]
     - [0x6ac58, c, P2/hide]
-    - [0x6ba18, asm, P2/UNKNOWN2] # Not in the prototype.
+    - [0x6ba18, asm, P2/hideout]
     - [0x6d470, c, P2/hnd]
     - [0x6d4e8, c, P2/ik]
     - [0x6de00, asm, P2/jack] # Might be something else.
