Split P2/rip, match function & cleanup

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -185,9 +185,8 @@ segments:
     - [0x9c038, c, P2/rat]
     - [0x9d440, c, P2/rchm]
     - [0x9e410, c, P2/render]
-    - [0x9f040, asm, P2/rip]
-    #- [0x, asm, P2/rog]
-    #- [0x, asm, P2/rope]
+    - [0x9f040, c, P2/rip]
+    - [0xa4ae0, asm, P2/rog]
     - [0xa8b20, c, P2/rumble]
     - [0xa8fe8, c, P2/rwm]
     - [0xaa8f8, asm, P2/sb]
@@ -264,6 +263,7 @@ segments:
     # P2/menu - debug menu
     # P2/vife.c - vif encoder
     # P2/wibu_ee.c - wibukey encryption
+    # P2/rope.c - unknown
 
     #--------------------------------------------------------
     # Libs
