--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -205,14 +205,14 @@ segments:
     - [0xbf1e8, c, P2/sound]
     - [0xc1f30, c, P2/speaker]
     - [0xc20a8, c, P2/spire]
-    - [0xc2190, asm, P2/splicemap]
-    - [0xc24c0, asm, P2/spliceobj]
-    - [0xc3430, asm, P2/sprbuf]
-    #- [0x, asm, P2/sqtr]
-    #- [0x, asm, P2/squish]
+    - [0xc2190, c, P2/splicemap]
+    - [0xc24c0, c, P2/spliceobj]
+    - [0xc3430, c, P2/sprbuf]
+    - [0xc39e8, c, P2/sqtr]
+    - [0xc4390, asm, P2/squish] # Might be something else.
     - [0xc5458, asm, P2/step]
-    - [0xc6f18, asm, P2/stepact]
-    - [0xc71e0, asm, P2/stepcane]
+    - [0xc6f18, c, P2/stepact]
+    - [0xc71e0, c, P2/stepcane]
     - [0xc7f48, asm, P2/stepguard]
     - [0xcd410, asm, P2/stephang]
     - [0xcefb8, asm, P2/stephide]
