--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -115,7 +115,7 @@ segments:
     - [0x4a398, c, P2/cplcy]
     - [0x4bbd0, c, P2/credit]
     - [0x4c0c0, c, P2/crout]
-    - [0x4c550, asm, P2/crusher]
+    - [0x4c550, c, P2/crusher]
     - [0x4e0a8, c, P2/crv]
     - [0x4fe40, c, P2/dart]
     - [0x50740, c, P2/dartgun]
@@ -199,7 +199,7 @@ segments:
     - [0xb6d80, c, P2/slotheap]
     - [0xb6f50, c, P2/sm]
     - [0xb7ec8, c, P2/smartguard]
-    - [0xb8968, asm, P2/so]
+    - [0xb8968, c, P2/so]
     - [0xbd760, c, P2/solve]
     - [0xbf068, c, P2/sort]
     - [0xbf1e8, c, P2/sound]
@@ -210,7 +210,7 @@ segments:
     - [0xc3430, c, P2/sprbuf]
     - [0xc39e8, c, P2/sqtr]
     - [0xc4390, asm, P2/squish] # Might be something else.
-    - [0xc5458, asm, P2/step]
+    - [0xc5458, c, P2/step]
     - [0xc6f18, c, P2/stepact]
     - [0xc71e0, c, P2/stepcane]
     - [0xc7f48, asm, P2/stepguard]
