--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -88,7 +88,7 @@ segments:
     - [0x243c0, c, P2/alarm]
     - [0x24dc0, asm, P2/alo]
     # Note: Anticrack check for ITM firewall is 0x2c760, maybe it's own TU?
-    - [0x2c870, asm, P2/aseg]
+    - [0x2c868, c, P2/aseg]
     - [0x2e3f8, c, P2/asega]
     - [0x30840, c, P2/barrier]
     - [0x30cf0, c, P2/bas]
@@ -194,7 +194,7 @@ segments:
     - [0xb2ac8, c, P2/shadow]
     - [0xb3840, c, P2/shape]
     - [0xb3988, c, P2/shd]
-    - [0xb5920, asm, P2/shdanim]
+    - [0xb5920, c, P2/shdanim]
     - [0xb6cd8, c, P2/sky]
     - [0xb6d80, c, P2/slotheap]
     - [0xb6f50, c, P2/sm]
@@ -214,8 +214,8 @@ segments:
     - [0xc6f18, c, P2/stepact]
     - [0xc71e0, c, P2/stepcane]
     - [0xc7f48, asm, P2/stepguard]
-    - [0xcd410, asm, P2/stephang]
-    - [0xcefb8, asm, P2/stephide]
+    - [0xcd410, c, P2/stephang]
+    - [0xcefb8, c, P2/stephide]
     - [0xd24f0, c, P2/steppipe]
     - [0xd39c8, c, P2/steppower]
     - [0xd41d0, asm, P2/steprail]
