--- a/.github/workflows/progress.yml
+++ b/.github/workflows/progress.yml
@@ -42,6 +42,10 @@ jobs:
           ninja
           ./tools/objdiff/objdiff-cli report generate > report.json
 
+      - name: Run clean report script
+        run: |
+          python ./scripts/clean_report.py
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
