Split P2/steprun, P2/stepside & misc stuff

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -219,8 +219,8 @@ segments:
     - [0xd24f0, c, P2/steppipe]
     - [0xd39c8, c, P2/steppower]
     - [0xd41d0, asm, P2/steprail]
-    - [0xd46f0, asm, P2/steprun]
-    - [0xd5148, asm, P2/stepside]
+    - [0xd46f0, c, P2/steprun]
+    - [0xd5148, c, P2/stepside]
     - [0xd5848, asm, P2/stepzap]
     - [0xd8100, c, P2/stream]
     - [0xd83a8, c, P2/suv]
@@ -416,8 +416,8 @@ segments:
 
     #- [0x, data, P2/prompt]
     #- [0x, data, P2/proxy]
-    #- [0x, data, P2/puffer]
-    #- [0x, data, P2/pzo]
+    - [0x16b710, data, P2/puffer]
+    - [0x16b910, data, P2/pzo]
     #- [0x, data, P2/rail]
     #- [0x, data, P2/rat]
     #- [0x, data, P2/rchm]
