--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -83,7 +83,7 @@ segments:
     - [0x1dbb8, c, P2/989snd] #MARK: P2
     - [0x1f560, c, P2/brx]
     - [0x1fe70, c, P2/ac]
-    - [0x22228, asm, P2/act]
+    - [0x22228, c, P2/act]
     - [0x23f28, c, P2/actseg]
     - [0x243c0, c, P2/alarm]
     - [0x24dc0, c, P2/alo]
