Cleanup workflows and scripts

--- a/.github/workflows/frogress.yml
+++ b/.github/workflows/frogress.yml
@@ -1,4 +1,4 @@
-name: Post progress to Frogress
+name: Post mapfile_parser progress to Frogress endpoint
 
 on:
   push:
@@ -42,4 +42,4 @@ jobs:
 
       - name: Post to frogress endpoint
         run: |
-          python3 scripts/upload_progress.py --frogress_api_key ${{ secrets.FROGRESS_API_KEY }}
+          python3 scripts/frogress.upload_progress.py --frogress_api_key ${{ secrets.FROGRESS_API_KEY }}
