Match functions and split P2/steprail

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -218,7 +218,7 @@ segments:
     - [0xcefb8, c, P2/stephide]
     - [0xd24f0, c, P2/steppipe]
     - [0xd39c8, c, P2/steppower]
-    - [0xd41d0, asm, P2/steprail]
+    - [0xd41d0, c, P2/steprail]
     - [0xd46f0, c, P2/steprun]
     - [0xd5148, c, P2/stepside]
     - [0xd5848, asm, P2/stepzap]
