Split P2/emitter & match a few functions

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -125,7 +125,7 @@ segments:
     - [0x53810, c, P2/dmas]
     - [0x53e28, c, P2/dysh]
     - [0x54528, c, P2/dzg]
-    - [0x559c8, asm, P2/emitter]
+    - [0x559c8, c, P2/emitter]
     - [0x5a680, c, P2/eyes]
     - [0x5aad0, c, P2/fader]
     - [0x5aca0, asm, P2/UNKNOWN1] # Not in the prototype.
