--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -213,7 +213,7 @@ segments:
     - [0xc5458, c, P2/step]
     - [0xc6f18, c, P2/stepact]
     - [0xc71e0, c, P2/stepcane]
-    - [0xc7f48, asm, P2/stepguard]
+    - [0xc7f48, c, P2/stepguard]
     - [0xcd410, c, P2/stephang]
     - [0xcefb8, c, P2/stephide]
     - [0xd24f0, c, P2/steppipe]
@@ -468,7 +468,7 @@ segments:
 
     #- [0x, data, P2/tail]
     #- [0x, data, P2/tank]
-    #- [0x, data, P2/target]
+    - [0x1768d0, data, P2/target]
     #- [0x, data, P2/text]
     #- [0x, data, P2/thread]
     #- [0x, data, P2/tn]
