Split P2/rog & match some functions

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -185,7 +185,7 @@ segments:
     - [0x9d440, c, P2/rchm]
     - [0x9e410, c, P2/render]
     - [0x9f040, c, P2/rip]
-    - [0xa4ae0, asm, P2/rog]
+    - [0xa4ae0, c, P2/rog]
     - [0xa8b20, c, P2/rumble]
     - [0xa8fe8, c, P2/rwm]
     - [0xaa8f8, asm, P2/sb]
