Split P2/sb, match functions, cleanup

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -188,7 +188,7 @@ segments:
     - [0xa4ae0, c, P2/rog]
     - [0xa8b20, c, P2/rumble]
     - [0xa8fe8, c, P2/rwm]
-    - [0xaa8f8, asm, P2/sb]
+    - [0xaa8f8, c, P2/sb]
     - [0xaac68, c, P2/screen]
     - [0xafcb0, c, P2/sensor]
     - [0xb2ac8, c, P2/shadow]
