--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -350,7 +350,7 @@ segments:
     - [0x162f80, data, P2/emitter]
     #- [0x, data, P2/eyes]
     #- [0x, data, P2/fader]
-    #- [0x, data, P2/filestub]
+    #- [0x, data, P2/UNKNOWN1]
     #- [0x, data, P2/find]
     #- [0x, data, P2/flash]
     - [0x163180, data, P2/fly]
@@ -479,7 +479,7 @@ segments:
     #- [0x, data, P2/ui]
     #- [0x, data, P2/update]
     #- [0x, data, P2/util]
-    #- [0x, data, P2/var]
+    #- [0x, data, P2/vb]
     #- [0x, data, P2/vec]
     #- [0x, data, P2/vifs]
     #- [0x, data, P2/vis]
