--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -290,6 +290,7 @@ segments:
     - [0x14A3A0, .rodata, P2/splice/serialize]
     - [0x14A428, rodata] #, P2/989snd]
     - [0x14A870, rodata]
+    #- [0x14AE20, .rodata, P2/cd]
     - [0x14B0E0, .rodata, P2/dmas]
     - [0x14B0F8, rodata]
 
